[package]
name = "prikolization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.6.1"
indicatif = "0.17.3"
rexiv2 = "0.10.0"
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
